@@ -198,9 +198,15 @@ void Foam::eventFlux::updateCoeffs()
         eventFile_.update(this->db().time().value());
     }
 
+    if ((mag(valueEvent + eventFluxValue_) > SMALL) && (mag(sum(phip_)) < SMALL))
+    {
+        FatalErrorIn("eventFlux.C")
+            << "non-zero fixed flux for C with zero flux field phi" << abort(FatalError);
+    }
+
     //- Computing fixed value
     scalarField results(patch().patch().faceCentres().size());    
-    results = (eventFluxValue_+valueEvent)/sum(phip_);
+    results = (eventFluxValue_+valueEvent)/sum(phip_+SMALL);
     operator== (results);
     fixedValueFvPatchScalarField::updateCoeffs();
 }
